# Classroom-Bot

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  buildImage.sh  cmake_install.cmake  config.json  default_config.json  docker-compose.yml  docker_runtime_libs.sh  dockerbuilder.sh  downgrade_libssl.sh  main.cpp  migrate-1.6-1.7.sql  premake.sh  premake5.lua  pushImage.sh  release.sh  releaseHeroku.sh  run.sh  setup.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
dockerscripts/: installdpp.sh  installlibmongoc.sh  installmongocxx.sh  installpoco.sh
include/bot/: bot.h
include/bot/commands/: command.h  handsCommand.h  helpCommand.h  questionCommand.h
lang/: da.json  es.json  french.json  ge.json  nl.json  pol.json  por.json  template.json  thai.json
libs/: libmongoc-1.0.so.0
src/: aegis.cpp  cbpch.h  main.cpp
src/bot/: bot.cpp  bot.h
src/bot/commands/: attendanceCommand.cpp  attendanceCommand.h  command.cpp  command.cppn  command.h  handsCommand.cpp  handsCommand.cppn  handsCommand.h  helpCommand.cpp  helpCommand.cppn  helpCommand.h  inviteCommand.cpp  inviteCommand.cppn  inviteCommand.h  manage.cpp  manage.h  muteCommand.cpp  muteCommand.cppn  muteCommand.h  pchemCommand.cpp  pchemCommand.h  questionCommand.cpp  questionCommand.cppn  questionCommand.h  settingsCommad.h  settingsCommand.cpp  settingsCommand.cppn  settingsCommand.h
src/bot/config/: config.cpp  config.h
src/bot/localization/: localization.cpp  localization.h
src/bot/persistence/: cache.h  db.cpp  db.h  persistence.h  (+3 more)
(+22 files in other folders)
